--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.3",
+    "axios": "^1.1.3",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
+    "import": "^0.0.6",
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
