--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@dietime/react-native-date-picker": "^1.2.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "4.0.0",
@@ -25,6 +26,7 @@
     "@react-navigation/stack": "^6.3.3",
     "axios": "^1.1.3",
     "expo": "^44.0.0",
+    "expo-linear-gradient": "^11.4.0",
     "expo-status-bar": "~1.2.0",
     "import": "^0.0.6",
     "native-base": "3.4.0",
